k8s/api-gateway-v1.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-gateway-v1
  namespace: rapido-prod

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api-gateway
      version: v1

  template:
    metadata:
      labels:
        app: api-gateway
        version: v1

    spec:
      containers:
        - name: api-gateway

          image: rapido-clone-backend-api-gateway:latest

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
