k8s/jaeger.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: jaeger
  namespace: observability

spec:
  replicas: 1

  selector:
    matchLabels:
      app: jaeger

  template:
    metadata:
      labels:
        app: jaeger

    spec:
      containers:
        - name: jaeger

          image: jaegertracing/all-in-one:latest

          ports:
            - containerPort: 16686
            - containerPort: 4317

---
apiVersion: v1
kind: Service

metadata:
  name: jaeger
  namespace: observability

spec:
  selector:
    app: jaeger

  ports:

    - name: ui
      port: 16686
      targetPort: 16686

    - name: otlp
      port: 4317
      targetPort: 4317

  type: ClusterIP
