k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: rapido-prod

spec:
  replicas: 1

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
        - name: user-service
          image: rapido-clone-backend-user-service:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: rapido-prod

spec:
  selector:
    app: user-service

  ports:
    - port: 8082
      targetPort: 8082

  type: ClusterIP
