k8s/api-gateway-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: api-gateway-vs
  namespace: rapido-prod

spec:
  hosts:
    - "*"

  gateways:
    - rapido-gateway

  http:
    - match:
        - uri:
            prefix: /

      route:
        - destination:
            host: api-gateway
            port:
              number: 8080
