k8s/circuit-breaker.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule

metadata:
  name: payment-circuit-breaker
  namespace: rapido-prod

spec:
  host: payment-service

  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 5

    outlierDetection:
      consecutive5xxErrors: 3
      interval: 10s
      baseEjectionTime: 30s
