k8s/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule

metadata:
  name: api-gateway-dr
  namespace: rapido-prod

spec:
  host: api-gateway

  subsets:

    - name: v1
      labels:
        version: v1

    - name: v2
      labels:
        version: v2
